# magpie

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  README.md  TODO.md  conanfile.py
.github/workflows/: build.yaml  docs.yaml
bench/: .gitignore  CMakeLists.txt  README.md  locustfile.py  requirements.txt
bench/src/: Main.cpp
cmake/: Findasio.cmake  Findlibnghttp2.cmake  Findnghttp2.cmake
demos/: CMakeLists.txt
demos/src/: BasicHTTPServer.cpp
dev/zellij/: default.kdl
docs/: Basic server example.md  Custom loggers.md  Error handling.md  FAQ.md
docs/ideas/: API doc generation.md  README.md  Streamed input.md
docs/router/: Design.md
src/: CMakeLists.txt
src/magpie/: App.cpp  App.hpp  AppDecl.hpp  Magpie.cpp  Magpie.hpp
src/magpie/application/: Adapter.hpp  Http2Adapter.cpp  Http2Adapter.hpp  Methods.hpp
src/magpie/application/formats/: Cookie.cpp  Cookie.hpp
src/magpie/application/http2/: Nghttp2Callbacks.cpp  Nghttp2Callbacks.hpp
src/magpie/config/: AppConfig.hpp  SSLConfig.cpp  SSLConfig.hpp
src/magpie/data/: CommonData.hpp
src/magpie/dsa/: RadixTree.hpp
src/magpie/error/: Result.hpp
src/magpie/except/: RouteException.hpp
src/magpie/handlers/: StatusHandlers.hpp
src/magpie/internals/: RouteCompiler.hpp
src/magpie/logger/: Logger.hpp
src/magpie/middlewares/: Middleware.hpp  MiddlewareProcessor.hpp
src/magpie/routing/: BaseRoute.hpp  BaseRouter.hpp  Compile.hpp  Route.hpp  RouteBuilder.hpp  Router.hpp
src/magpie/transfer/: CompressedResponse.cpp  CompressedResponse.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  StatusCode.hpp
src/magpie/transfer/adapters/: CompressionDataAdapter.cpp  CompressionDataAdapter.hpp  DataAdapter.hpp  FixedDataAdapter.cpp  FixedDataAdapter.hpp
src/magpie/transport/: BaseConnection.hpp  Connection.cpp  Connection.hpp  SSLConnection.hpp  TCPServer.cpp  TCPServer.hpp  Worker.hpp
src/magpie/utility/: ErrorHandler.hpp
tests/: CMakeLists.txt
tests/src/exception/: ErrorHandlerTests.cpp
tests/src/integration/: BasicServerTests.cpp  CatchAllTests.cpp  CompressionTests.cpp  MiddlewareTests.cpp  RouteParamTests.cpp  ServerErrorHandlerTests.cpp  TestApp.hpp
tests/src/integration/cookies/: CookieIngestTests.cpp
tests/src/integration/redirects/: BasicRedirectTests.cpp
tests/src/integration/regression/: StatusCodeOnSubtreeTests.cpp
tests/src/internals/: ParameterisedTest.hpp
tests/src/routing/: RouteCompilationTests.cpp  RouterTests.cpp
tests/src/transfer/adapters/: FixedDataAdapterTests.cpp
